--- a/templates/infra/zookeeper.tmpl.yaml
+++ b/templates/infra/zookeeper.tmpl.yaml
@@ -79,11 +79,10 @@ spec:
   volumeClaimTemplates:
   - metadata:
       name: zookeeper-claim
-      annotations:
-        volume.beta.kubernetes.io/storage-class: {{ .storage_class_name }}
     spec:
       accessModes:
         - ReadWriteOnce
+      storageClassName: {{ .storage_class_name }}
       resources:
         requests:
           storage: {{ .zookeeper_disk }}
