--- a/templates/ingress/ingress.tmpl.yaml
+++ b/templates/ingress/ingress.tmpl.yaml
@@ -4,7 +4,7 @@ kind: Namespace
 metadata:
   name: ingress-nginx
 ---
-apiVersion: extensions/v1beta1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: default-http-backend
@@ -13,6 +13,9 @@ metadata:
   namespace: ingress-nginx
 spec:
   replicas: 1
+  selector:
+    matchLabels:
+      app: default-http-backend
   template:
     metadata:
       labels:
@@ -204,7 +207,7 @@ subjects:
     name: nginx-ingress-serviceaccount
     namespace: ingress-nginx
 ---
-apiVersion: extensions/v1beta1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: nginx-ingress-controller
